// Vitest Snapshot v1

exports[`Select Component > should render and match the snapshot 1`] = `
<DocumentFragment>
  <select
    class="rounded border border-border-gray-300 dark:border-gray-600 bg-bg-transparent text-text-gray-800 dark:text-gray-200"
  >
    <option
      class="text-text-gray-800 dark:text-gray-200 bg-bg-white dark:bg-gray-800"
      value="1"
    >
      Option 1
    </option>
    <option
      class="text-text-gray-800 dark:text-gray-200 bg-bg-white dark:bg-gray-800"
      value="2"
    >
      Option 2
    </option>
    <option
      class="text-text-gray-800 dark:text-gray-200 bg-bg-white dark:bg-gray-800"
      value="3"
    >
      Option 3
    </option>
  </select>
</DocumentFragment>
`;

exports[`Select Component > should render with custom styles and match the snapshot 1`] = `
<DocumentFragment>
  <select
    class="rounded border border-red-500 bg-blue-100 text-green-500"
  >
    <option
      class="text-yellow-500 bg-gray-300"
      value="1"
    >
      Option 1
    </option>
    <option
      class="text-yellow-500 bg-gray-300"
      value="2"
    >
      Option 2
    </option>
    <option
      class="text-yellow-500 bg-gray-300"
      value="3"
    >
      Option 3
    </option>
  </select>
</DocumentFragment>
`;
